# k8sr

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  k8sr-services.yaml
src/: k8sr0.rs  k8sr1.rs  main.rs
src/app/: mod.rs
src/error/: mod.rs
src/message/: mod.rs
