[package]
name = "k8sr"
version = "0.2.3"
authors = ["Kevin J Hoerr <kjhoerr@submelon.tech>"]

[[bin]]
name = "k8sr0"
path = "src/k8sr0.rs"

[[bin]]
name = "k8sr1"
path = "src/k8sr1.rs"

[dependencies]
rocket = "0.4.0-rc.2"
reqwest = "0.9.5"
gauc = "0.8.1"

rocket_contrib = "0.4.0-rc.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

dotenv = "0.10"
env_logger = "0.5"
failure = "^0.1"
log = "0.4"